get all streams stats with get endpoints
